syntax = "proto3";

message ProtobufMsg {
  string identifier = 1;
  bytes protobuf = 2;
}
